sender/build/log/idf_py_stdout_output_18000
[1/10] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Projects\Wifi_Module\software\spiMaster_test\sender\build\esp-idf\main && c:\Users\Tori\esp\v5.4.1\.espressif\python_env\idf5.4_py3.11_env\Scripts\python.exe C:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/spiffs/spiffsgen.py 0x180000 C:/Projects/Wifi_Module/software/spiMaster_test/sender/spiffs_image C:/Projects/Wifi_Module/software/spiMaster_test/sender/build/storage.bin --page-size=256 --obj-name-len=32 --meta-len=4 --use-magic --use-magic-len"
[2/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Projects\Wifi_Module\software\spiMaster_test\sender\build\bootloader\esp-idf\esptool_py && c:\Users\Tori\esp\v5.4.1\.espressif\python_env\idf5.4_py3.11_env\Scripts\python.exe C:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Projects/Wifi_Module/software/spiMaster_test/sender/build/bootloader/bootloader.bin"
Bootloader binary size 0x55f0 bytes. 0x2a10 bytes (33%) free.
[3/10] No install step for 'bootloader'
[4/10] Completed 'bootloader'
[5/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj 
ccache C:\Users\Tori\esp\v5.4.1\.espressif\tools\riscv32-esp-elf\esp-14.2.0_20241119\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Projects/Wifi_Module/software/spiMaster_test/sender/build/config -IC:/Projects/Wifi_Module/software/spiMaster_test/sender/main -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/newlib/platform_include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/freertos/config/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/freertos/config/riscv/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_hw_support/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_hw_support/include/soc/esp32c6 -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_hw_support/dma/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_hw_support/port/esp32c6/. -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_hw_support/port/esp32c6/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_hw_support/port/esp32c6/private_include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/heap/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/heap/tlsf -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/log/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/soc/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/soc/esp32c6 -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/soc/esp32c6/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/soc/esp32c6/register -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/hal/platform_port/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/hal/esp32c6/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/hal/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_rom/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_rom/esp32c6/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_rom/esp32c6/include/esp32c6 -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_rom/esp32c6 -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_common/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_system/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_system/port/soc -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_system/port/include/riscv -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_system/port/include/private -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/riscv/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/lwip/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/lwip/include/apps -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/lwip/include/apps/sntp -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/lwip/lwip/src/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/lwip/port/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/lwip/port/freertos/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/spiffs/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_partition/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_driver_spi/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_pm/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_driver_gpio/include -IC:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf/components/esp_timer/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Projects/Wifi_Module/software/spiMaster_test/sender=. -fmacro-prefix-map=C:/Users/Tori/esp/v5.4.1/v5.4.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\app_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -c C:/Projects/Wifi_Module/software/spiMaster_test/sender/main/app_main.c
C:/Projects/Wifi_Module/software/spiMaster_test/sender/main/app_main.c: In function 'app_main':
C:/Projects/Wifi_Module/software/spiMaster_test/sender/main/app_main.c:181:15: error: redeclaration of 'ret' with no linkage
  181 |     esp_err_t ret = esp_vfs_spiffs_register(&conf);
      |               ^~~
C:/Projects/Wifi_Module/software/spiMaster_test/sender/main/app_main.c:129:15: note: previous declaration of 'ret' with type 'esp_err_t' {aka 'int'}
  129 |     esp_err_t ret;
      |               ^~~
C:/Projects/Wifi_Module/software/spiMaster_test/sender/main/app_main.c:164:10: warning: unused variable 'recvbuf' [-Wunused-variable]
  164 |     char recvbuf[BUF_SIZE] = {0};
      |          ^~~~~~~
C:/Projects/Wifi_Module/software/spiMaster_test/sender/main/app_main.c:163:10: warning: unused variable 'sendbuf' [-Wunused-variable]
  163 |     char sendbuf[BUF_SIZE] = {0};
      |          ^~~~~~~
C:/Projects/Wifi_Module/software/spiMaster_test/sender/main/app_main.c:162:9: warning: unused variable 'n' [-Wunused-variable]
  162 |     int n = 0;
      |         ^
C:/Projects/Wifi_Module/software/spiMaster_test/sender/main/app_main.c: At top level:
C:/Projects/Wifi_Module/software/spiMaster_test/sender/main/app_main.c:91:13: warning: 'read_file_chunk' defined but not used [-Wunused-function]
   91 | static void read_file_chunk(){
      |             ^~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
